[package]
    name    = "manifold-markets"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    futures-util = "0.3.26"
    reqwest      = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
    serde_json   = "1.0.93"

[dev-dependencies]
    anyhow = "1.0.69"
dotenv = "0.15.0"
    tokio  = { version = "1.25.0", features = ["full"] }
